<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Examples</string>
    <string name="rss_name">RssReader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_feed_menu_title">Add Feed</string>
    <string name="action_delete_feed">Delete Feed</string>
    <string name="title_activity_rss_items">RssItemsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_playground">PlaygroundActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="playground_create_tasks_title">Create</string>
    <string name="playground_change_tasks_title">Change</string>

    <string name="create_task_cell_button_title">Create</string>
    <string name="create_task_cell_create_new_title">Add task config</string>

    <string name="task_confing_done">Done</string>
    <string name="task_config_field_name">Name</string>
    <string name="task_config_field_type">Type</string>
    <string name="task_config_field_count">Count</string>
    <string name="task_config_field_start_id">Start Id</string>
    <string name="task_config_field_duration">Duration</string>
    <string name="task_config_field_priority">Priority</string>
    <string name="task_config_field_load_policy">Load Policy</string>

    <string name="ok">OK</string>
    <string name="error_title">Error</string>
    <string name="load_error">Can\'t load feed %s</string>
    <string name="save_error">Save error</string>

    <string-array name="task_config_load_policy_values">
        <item>Skip If Added"</item>
        <item>Cancel If Added</item>
    </string-array>

</resources>
